# agent-red-team

./: .gitignore  AGENTS.md  README.md  latest-authority-manifest.json  pyproject.toml
.github/ISSUE_TEMPLATE/: audit-request.yml
.well-known/: agent-federation.json  agent.json
bundles/7b4f2dc16d2d225c4dfd4c1a1beaec62bc81ceab/: source-authority-bundle.json
bundles/7b4f2dc16d2d225c4dfd4c1a1beaec62bc81ceab/.authority-exports/: canonical-surface.json  public-summary-registry.json  surface-metadata.json
data/federation/: peer.json
docs/architecture/: MODULAR_AUDIT_PIPELINE.md  PERSISTENT_AUTONOMOUS_INSTITUTION_V0.5.md
docs/authority/: AUDIT_REQUEST_AND_DISCLOSURE_POLICY.md  capabilities.json  charter.md
docs/templates/: AUDIT_REPORT_TEMPLATE.md  AUDIT_REQUEST_TEMPLATE.md
examples/: audit-report.example.json  audit-request.example.json
schemas/: audit-report.v1.schema.json  audit-request.v1.schema.json
scripts/: quickstart.py  setup_node.py
src/agent_red_team/: __init__.py  contracts.py  models.py  pipeline.py
src/agent_red_team/modules/: __init__.py
src/agent_red_team/persistence/: __init__.py  connection.py  migration.py  models.py  repository.py  serialization.py
tests/: test_audit_seed.py  test_federation.py  test_governance.py  test_persistence.py
