[project]
name = "agent-red-team"
version = "0.1.0"
description = "Request-driven federation security-audit node"
requires-python = ">=3.11"
license = "MIT"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "jsonschema>=4.20",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_red_team*"]
